[gd_scene load_steps=6 format=2]

[ext_resource path="res://npc/npc.gd" type="Script" id=1]
[ext_resource path="res://text_gen/text_gen.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/styles/label.tres" type="StyleBox" id=3]
[ext_resource path="res://interface/fonts/font_regular.tres" type="DynamicFont" id=4]

[sub_resource type="BoxShape" id=1]

[node name="npc" type="Spatial"]
script = ExtResource( 1 )

[node name="area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="cshape" type="CollisionShape" parent="area"]
shape = SubResource( 1 )

[node name="text_gen" parent="." instance=ExtResource( 2 )]

[node name="label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 278.0
margin_top = -324.0
margin_right = -306.0
margin_bottom = -102.0
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "sample text"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="area" to="." method="_body_entered"]
[connection signal="body_exited" from="area" to="." method="_body_exited"]
